Fixed component spawns and structure spawn rates